--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=jdbc:postgres://postgres:5432/docker_db
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-spring.datasource.username=docker
-spring.datasource.password=docker
+# DataSource
+spring.datasource.url=jdbc:postgresql://app-db:5432/docker_db
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://app-db:5432/docker_db
+spring.datasource.driverClassName: org.postgresql.Driver
+spring.datasource.username=docker_user
+spring.datasource.password=docker_password
+
+# JPA
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# настройки для PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.jdbc.lob.non_contextual_creation=true
