--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # DataSource
 spring.datasource.url=jdbc:postgresql://app-db:5432/docker_db
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://app-db:5432/docker_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/docker_db
+#spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/docker_db
+#docker run -p 5432:5432 -e POSTGRES_PASSWORD=docker_password -e POSTGRES_USER=docker_user -e POSTGRES_DB=docker_db  postgres:12
+
 spring.datasource.driverClassName: org.postgresql.Driver
 spring.datasource.username=docker_user
 spring.datasource.password=docker_password
@@ -8,7 +12,7 @@ spring.datasource.password=docker_password
 # JPA
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # настройки для PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
