Добавлен Dto-layer, + маппинг

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DataSource
-spring.datasource.url=jdbc:postgresql://app-db:5432/docker_db
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://app-db:5432/docker_db
-#spring.datasource.url=jdbc:postgresql://localhost:5432/docker_db
-#spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/docker_db
+#spring.datasource.url=jdbc:postgresql://app-db:5432/docker_db
+#spring.datasource.hikari.jdbc-url=jdbc:postgresql://app-db:5432/docker_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/docker_db
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/docker_db
 #docker run -p 5432:5432 -e POSTGRES_PASSWORD=docker_password -e POSTGRES_USER=docker_user -e POSTGRES_DB=docker_db  postgres:12
 
 spring.datasource.driverClassName: org.postgresql.Driver
